ADD: 修改版本号，路径

--- a/home-web/pom.xml
+++ b/home-web/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
         <groupId>happy-home</groupId>
         <artifactId>first-web</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath/>
 	</parent>
     <artifactId>happy-web</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>happy-web</name>
 
     <properties>
