--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
     <groupId>happy-home</groupId>
     <artifactId>first-web</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>first-web</name>
 
     <properties>
@@ -17,7 +17,7 @@
 	</properties>
 
     <modules>
-        <module>happy-web</module>
+        <module>home-web</module>
     </modules>
 
 </project>
