--- a/home-web/pom.xml
+++ b/home-web/pom.xml
@@ -12,7 +12,7 @@
     <name>home-web</name>
 
     <properties>
-        <spring.cloud.version>2.1.3.RELEASE</spring.cloud.version>
+        <spring-cloud.version>Greenwich.SR5</spring-cloud.version>
 	</properties>
 
     <dependencies>
@@ -25,12 +25,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- spring cloud config 客户端包 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
-            <version>${spring.cloud.version}</version>
         </dependency>
 
         <dependency>
@@ -38,7 +42,18 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
-
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
