ADD: 增加spring-cloud-bus，更新多个节点的配置

--- a/home-web/src/main/resources/application.yml
+++ b/home-web/src/main/resources/application.yml
@@ -10,6 +10,13 @@ management:
             exposure:
                 include: "*"
 
+spring:
+    rabbitmq:
+        host: localhost
+        port: 5672
+        username: guest
+        password: guest
+
 data:
     env: NaN
     user:
