--- a/home-web/pom.xml
+++ b/home-web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
         <groupId>happy-home</groupId>
         <artifactId>first-web</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.2</version>
         <relativePath/>
 	</parent>
     <artifactId>home-web</artifactId>
@@ -39,6 +39,14 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
