--- a/home-web/src/main/resources/bootstrap.yml
+++ b/home-web/src/main/resources/bootstrap.yml
@@ -2,6 +2,14 @@ spring:
   profiles:
     active: dev
 
+eureka:
+    instance:
+        prefer-ip-address: true
+    client:
+        serviceUrl:
+            defaultZone: http://localhost:9090/eureka
+        register-with-eureka: false
+
 ---
 spring:
   profiles: dev
@@ -9,10 +17,11 @@ spring:
     name: home-web
   cloud:
      config:
-       uri: http://localhost:8081
        label: master
        profile: dev
-
+       discovery:
+        enabled: true
+        service-id: config-server
 
 ---
 spring:
@@ -21,6 +30,8 @@ spring:
     name: home-web
   cloud:
      config:
-       uri: http://localhost:8081
        label: master
        profile: online
+       discovery:
+        enabled: true
+        service-id: config-server
