--- a/home-web/src/main/resources/bootstrap.yml
+++ b/home-web/src/main/resources/bootstrap.yml
@@ -4,10 +4,10 @@ spring:
 
 eureka:
     instance:
-        prefer-ip-address: true
+        prefer-ip-address: false
     client:
         serviceUrl:
-            defaultZone: http://localhost:9090/eureka
+            defaultZone: http://admin:123456@localhost:9090/eureka
         register-with-eureka: false
 
 ---
